<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    android:padding="@dimen/padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/cuadros">

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/inicio"
            android:drawableRight="@drawable/empezar">
        </Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cuadro_central"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/margin_1">

        <TextView
            android:id="@+id/txtBienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bienvenido"
            android:textSize="@dimen/text_wellcome"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBienvenido"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_wellcome"
            android:visibility="gone"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/cuadros">

        <Button
            android:id="@+id/btnFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/fin"
            android:drawableLeft="@drawable/finalizar">
        </Button>

    </RelativeLayout>

</LinearLayout>